--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,1 @@
-{ "root": "client" } 
+{ "builds": [{ "src": "client/build/**", "use": "@vercel/static" }], "routes": [{ "src": "/(.*)", "dest": "client/index.html" }] } 
